--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: 1.7em;
   font-weight: 300;
-  letter-spacing: .01em;
+  letter-spacing: 0.01em;
   line-height: 1.6;
   margin: 0px;
   min-height: 100vh; }
